--- a/museum/index.html
+++ b/museum/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:wght@100;300;400;500;700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -59,6 +59,50 @@
       </div>
     </div>
   </header>
+
+  <section class="welcom">
+    <div class="container">
+      <div class="welcom__inner">
+        <h1 class="section-title welcom__title">
+          Welcome <br>
+          to the Louvre
+        </h1>
+        <p class="welcom__text">From the castle to the museum</p>
+        <a class="btn"
+          href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">Discover
+          the Louvre
+        </a>
+        
+        <div class="slider">
+          <div class="slider__inner">
+            <div class="digits">
+              <p>01</p>
+              <span>|</span>
+              <p>05</p>
+            </div>
+            <ul class="squers">
+              <li class="squer squer-active"></li>
+              <li class="squer"></li>
+              <li class="squer"></li>
+              <li class="squer"></li>
+              <li class="squer"></li>
+            </ul>
+            <div class="arrows">
+              <button class="arrows__btn">
+                <img  src="assets/svg/arrow-left.svg" alt="arrow-left">
+              </button>
+              <button class="arrows__btn">
+                <img class="arrow-right" src="assets/svg/arrow-right.svg" alt="arrow-right">
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      
+    </div>
+
+  </section>
 
 </body>
 
