--- a/museum/index.html
+++ b/museum/index.html
@@ -72,7 +72,7 @@
           href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">Discover
           the Louvre
         </a>
-        
+
         <div class="slider">
           <div class="slider__inner">
             <div class="digits">
@@ -98,10 +98,52 @@
           </div>
         </div>
       </div>
-
-      
     </div>
+  </section>
 
+  <section class="visiting">
+    <div class="container">
+      <h2 class="section-title gold-title title-undreline">Virtual tour</h2>
+
+      <div class="cards__inner">
+        <a class="card" href="#">
+          <img class="card__img" src="assets/img/palace.jpg" alt="Royal Palace">
+          <h3 class="card__title">Royal Palace</h3>
+          <p class="card__text">360° Virtual Tour</p>
+          <p class="card__text-min">Google Street Panorama View</p>
+        </a>
+        <a class="card" href="#">
+          <img class="card__img" src="assets/img/denon.jpg" alt="Denon Wing">
+          <h3 class="card__title">Denon Wing</h3>
+          <p class="card__text">360° Virtual Tour</p>
+          <p class="card__text-min">Google Street Panorama View</p>
+        </a>
+        <a class="card" href="#">
+          <img class="card__img" src="assets/img//colonnade.jpg" alt="Colonnade Perrault">
+          <h3 class="card__title">Colonnade Perrault</h3>
+          <p class="card__text">360° Virtual Tour</p>
+          <p class="card__text-min">Google Street Panorama View</p>
+        </a>
+        <a class="card" href="#">
+          <img class="card__img" src="assets/img/greek.jpg" alt="Greek hall">
+          <h3 class="card__title">Greek hall</h3>
+          <p class="card__text">360° Virtual Tour</p>
+          <p class="card__text-min">Google Street Panorama View</p>
+        </a>
+        <a class="card" href="#">
+          <img class="card__img" src="assets/img/mona.jpg" alt="Mona Lisa">
+          <h3 class="card__title">Mona Lisa</h3>
+          <p class="card__text">360° Virtual Tour</p>
+          <p class="card__text-min">Google Street Panorama View</p>
+        </a>
+        <a class="card" href="#">
+          <img class="card__img" src="assets/img/night.jpg" alt="Night Palace">
+          <h3 class="card__title">Night Palace</h3>
+          <p class="card__text">360° Virtual Tour</p>
+          <p class="card__text-min">Google Street Panorama View</p>
+        </a>
+      </div>
+    </div>
   </section>
 
 </body>
