--- a/museum/index.html
+++ b/museum/index.html
@@ -144,7 +144,29 @@
         </a>
       </div>
     </div>
-  </section>
+  </section>  
+
+  <section class="explore">
+    <div class="container">
+
+      <div class="explore__inner">
+        <div class="explore__main">
+          <h2 class="section-title title-undreline">Picture explore</h2>
+          <p class="explore__text">
+            Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.
+          </p>
+          <p class="explore__text">
+            It was cleaned in 1984 to remove a <span>"yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.
+          </p>
+          <p class="explore__text">
+            The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.
+          </p>
+        </div>
+        
+        <img class="explore__img" src="assets/img/explore.jpg" alt="explore-img">
+      </div>
+    </div>
+  <section>
 
 </body>
 
