feat: add footer

--- a/museum/index.html
+++ b/museum/index.html
@@ -284,9 +284,13 @@
           <h3 class="contacts__title">Palais Royal <br> Musee du Louvre</h3>
 
           <ul class="contacts__list">
-            <li class="contacts__item"><p>address: 75001 Paris, France</p></li>
-            <li class="contacts__item"><a class="contacts__link" href="tel:330140205050" >phone: +33(0) 1 40 20 50 50</a></li>
-            <li class="contacts__item"><a class="contacts__link" href="mailto:info@louvre.fr">mail: info@louvre.fr</a></li>
+            <li class="contacts__item">
+              <p>address: 75001 Paris, France</p>
+            </li>
+            <li class="contacts__item"><a class="contacts__link" href="tel:330140205050">phone: +33(0) 1 40 20 50 50</a>
+            </li>
+            <li class="contacts__item"><a class="contacts__link" href="mailto:info@louvre.fr">mail: info@louvre.fr</a>
+            </li>
           </ul>
         </div>
         <img class="contacts__map" src="assets/img/map.jpg" alt="map">
@@ -295,8 +299,50 @@
   </section>
 
   <footer class="footer">
-    <div class="container">
-      
+    <div class="line">
+      <div class="container">
+        <div class="footer__inner">
+          <a class="logo" href="#">Louvre</a>
+          <nav class="footer__menu">
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item"><a class="footer__menu-link" href="#">Visiting</a></li>
+              <li class="footer__menu-item"><a class="footer__menu-link" href="#">Explore</a></li>
+              <li class="footer__menu-item"><a class="footer__menu-link" href="#">Video</a></li>
+            </ul>
+
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item"><a class="footer__menu-link" href="#">Gallery</a></li>
+              <li class="footer__menu-item"><a class="footer__menu-link" href="#">Tickets</a></li>
+              <li class="footer__menu-item"><a class="footer__menu-link" href="#">Contacts</a></li>
+            </ul>
+          </nav>
+
+          <ul class="icons__list">
+            <li class="icon"><a class="icon__link" href="#"><img src="assets/svg/youtube.svg" alt="youtube"></a></li>
+            <li class="icon"><a class="icon__link" href="#"><img src="assets/svg/instagram.svg" alt="instagram"></a>
+            </li>
+            <li class="icon"><a class="icon__link" href="#"><img src="assets/svg/facebook.svg" alt="facebook"></a></li>
+            <li class="icon"><a class="icon__link" href="#"><img src="assets/svg/twitter.svg" alt="twitter"></a></li>
+            <li class="icon"><a class="icon__link" href="#"><img src="assets/svg/pinterest.svg" alt="pinterest"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <div class="container">
+        <div class="footer__bottom-inner">
+          <p class="footer__bottom-text">
+            © 2021
+          </p>
+          <a class="footer__bottom-text" href="https://rs.school/js/">
+            The Rolling Scopes School
+          </a>
+          <a class="footer__bottom-text" href="https://github.com/l1irik-rbk">
+            l1irik-rbk
+          </a>
+        </div>
+      </div>
     </div>
   </footer>
 
