--- a/museum/index.html
+++ b/museum/index.html
@@ -60,244 +60,252 @@
     </div>
   </header>
 
-  <section class="welcom">
-    <div class="container">
-      <div class="welcom__inner">
-        <h1 class="section-title welcom__title">
-          Welcome <br>
-          to the Louvre
-        </h1>
-        <p class="welcom__text">From the castle to the museum</p>
-        <a class="btn"
-          href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">Discover
-          the Louvre
-        </a>
+  <main>
+    <section class="welcom">
+      <div class="container">
+        <div class="welcom__inner">
+          <h1 class="section-title welcom__title">
+            Welcome <br>
+            to the Louvre
+          </h1>
+          <p class="welcom__text">From the castle to the museum</p>
+          <a class="btn"
+            href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">Discover
+            the Louvre
+          </a>
 
-        <div class="slider">
-          <div class="slider__inner">
-            <div class="digits">
-              <p>01</p>
-              <span>|</span>
-              <p>05</p>
+          <div class="slider">
+            <div class="slider__inner">
+              <div class="digits">
+                <p>01</p>
+                <span>|</span>
+                <p>05</p>
+              </div>
+              <ul class="squers">
+                <li class="squer squer-active"></li>
+                <li class="squer"></li>
+                <li class="squer"></li>
+                <li class="squer"></li>
+                <li class="squer"></li>
+              </ul>
+              <div class="arrows">
+                <button class="arrows__btn">
+                  <img src="assets/svg/arrow-left.svg" alt="arrow-left">
+                </button>
+                <button class="arrows__btn">
+                  <img class="arrow-right" src="assets/svg/arrow-right.svg" alt="arrow-right">
+                </button>
+              </div>
             </div>
-            <ul class="squers">
-              <li class="squer squer-active"></li>
-              <li class="squer"></li>
-              <li class="squer"></li>
-              <li class="squer"></li>
-              <li class="squer"></li>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="visiting">
+      <div class="container">
+        <h2 class="section-title gold-title title-undreline">Virtual tour</h2>
+
+        <div class="cards__inner">
+          <a class="card" href="#">
+            <img class="card__img" src="assets/img/palace.jpg" alt="Royal Palace">
+            <h3 class="card__title">Royal Palace</h3>
+            <p class="card__text">360° Virtual Tour</p>
+            <p class="card__text-min">Google Street Panorama View</p>
+          </a>
+          <a class="card" href="#">
+            <img class="card__img" src="assets/img/denon.jpg" alt="Denon Wing">
+            <h3 class="card__title">Denon Wing</h3>
+            <p class="card__text">360° Virtual Tour</p>
+            <p class="card__text-min">Google Street Panorama View</p>
+          </a>
+          <a class="card" href="#">
+            <img class="card__img" src="assets/img//colonnade.jpg" alt="Colonnade Perrault">
+            <h3 class="card__title">Colonnade Perrault</h3>
+            <p class="card__text">360° Virtual Tour</p>
+            <p class="card__text-min">Google Street Panorama View</p>
+          </a>
+          <a class="card" href="#">
+            <img class="card__img" src="assets/img/greek.jpg" alt="Greek hall">
+            <h3 class="card__title">Greek hall</h3>
+            <p class="card__text">360° Virtual Tour</p>
+            <p class="card__text-min">Google Street Panorama View</p>
+          </a>
+          <a class="card" href="#">
+            <img class="card__img" src="assets/img/mona.jpg" alt="Mona Lisa">
+            <h3 class="card__title">Mona Lisa</h3>
+            <p class="card__text">360° Virtual Tour</p>
+            <p class="card__text-min">Google Street Panorama View</p>
+          </a>
+          <a class="card" href="#">
+            <img class="card__img" src="assets/img/night.jpg" alt="Night Palace">
+            <h3 class="card__title">Night Palace</h3>
+            <p class="card__text">360° Virtual Tour</p>
+            <p class="card__text-min">Google Street Panorama View</p>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section class="explore">
+      <div class="container">
+
+        <div class="explore__inner">
+          <div class="explore__main">
+            <h2 class="section-title title-undreline">Picture explore</h2>
+            <p class="explore__text">
+              Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.
+            </p>
+            <p class="explore__text">
+              It was cleaned in 1984 to remove a <span>"yellow veil"</span> of dust that had gathered since the previous
+              restoration in the 19th century.
+            </p>
+            <p class="explore__text">
+              The cleaning provoked furious protests, not because the picture had been damaged in any way, but because
+              it
+              looked different.
+            </p>
+          </div>
+
+          <img class="explore__img" src="assets/img/explore.jpg" alt="explore-img">
+        </div>
+      </div>
+    </section>
+
+    <section class="video">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section class="gallery">
+      <div class="container">
+        <h2 class="section-title">Art Gallery</h2>
+
+        <ul class="gallery__inner">
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/galery111.jpg" alt="gallery image">
+          </li>
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/gallery4.jpg" alt="gallery image">
+          </li>
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/gallery7.jpg" alt="gallery image">
+          </li>
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/gallery10.jpg" alt="gallery image">
+          </li>
+
+
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/gallery2.jpg" alt="gallery image">
+          </li>
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/gallery5.jpg" alt="gallery image">
+          </li>
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/gallery8.jpg" alt="gallery image">
+          </li>
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/gallery11.jpg" alt="gallery image">
+          </li>
+
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/gallery3.jpg" alt="gallery image">
+          </li>
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/gallery6.jpg" alt="gallery image">
+          </li>
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/gallery9.jpg" alt="gallery image">
+          </li>
+          <li class="gallery__item">
+            <img class="gallery__img" src="assets/img/galery12.jpg" alt="gallery image">
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="tickets">
+      <div class="container">
+        <h2 class="section-title gold-title title-undreline">BUY TICKETS</h2>
+
+        <div class="tickets__inner">
+          <img class="tickets__img" src="assets/img/tickets.jpg" alt="tickets image">
+
+          <div class="tickets__buying">
+            <div class="tickets__radio">
+              <h3 class="tickets__title">Ticket Type</h3>
+
+              <label class="tickets__label">
+                <input type="radio" checked="checked" name="radio">
+                <span class="checkmark"></span>
+                Permanent exhibition
+              </label>
+              <label class="tickets__label">
+                <input type="radio" name="radio">
+                <span class="checkmark"></span>
+                Temporary exhibition
+              </label>
+              <label class="tickets__label">
+                <input type="radio" name="radio">
+                <span class="checkmark"></span>
+                Combined Admission
+              </label>
+            </div>
+
+            <div class="tickets__amount">
+              <h3 class="tickets__amount-title">Amount</h3>
+
+
+              <p>Basic 18+</p>
+              <label class="tickets__buttons">
+                <button type="button">-</button>
+                <input type="number" min="0" max="20" value="1" readonly class="number">
+                <button class="last" type="button">+</button>
+              </label>
+
+              <p>Senior 65+</p>
+              <label class="tickets__buttons last__label">
+                <button type="button">-</button>
+                <input type="number" min="0" max="20" value="1" readonly class="number">
+                <button class="last" type="button">+</button>
+              </label>
+
+              <h3 class="tickets__title">Total €220</h3>
+              <button class="tickets__btn" type="button">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <img class="panorama" src="assets/img/panorama.jpg" alt="panorama">
+
+    <section class="contacts">
+      <div class="container">
+        <h2 class="section-title gold-title title-undreline">Contacts</h2>
+        <div class="contacts__inner">
+          <div class="contacts__info">
+            <h3 class="contacts__title">Palais Royal <br> Musee du Louvre</h3>
+
+            <ul class="contacts__list">
+              <li class="contacts__item">
+                <p>address: 75001 Paris, France</p>
+              </li>
+              <li class="contacts__item"><a class="contacts__link" href="tel:330140205050">phone: +33(0) 1 40 20 50
+                  50</a>
+              </li>
+              <li class="contacts__item"><a class="contacts__link" href="mailto:info@louvre.fr">mail: info@louvre.fr</a>
+              </li>
             </ul>
-            <div class="arrows">
-              <button class="arrows__btn">
-                <img src="assets/svg/arrow-left.svg" alt="arrow-left">
-              </button>
-              <button class="arrows__btn">
-                <img class="arrow-right" src="assets/svg/arrow-right.svg" alt="arrow-right">
-              </button>
-            </div>
           </div>
+          <img class="contacts__map" src="assets/img/map.jpg" alt="map">
         </div>
       </div>
-    </div>
-  </section>
-
-  <section class="visiting">
-    <div class="container">
-      <h2 class="section-title gold-title title-undreline">Virtual tour</h2>
-
-      <div class="cards__inner">
-        <a class="card" href="#">
-          <img class="card__img" src="assets/img/palace.jpg" alt="Royal Palace">
-          <h3 class="card__title">Royal Palace</h3>
-          <p class="card__text">360° Virtual Tour</p>
-          <p class="card__text-min">Google Street Panorama View</p>
-        </a>
-        <a class="card" href="#">
-          <img class="card__img" src="assets/img/denon.jpg" alt="Denon Wing">
-          <h3 class="card__title">Denon Wing</h3>
-          <p class="card__text">360° Virtual Tour</p>
-          <p class="card__text-min">Google Street Panorama View</p>
-        </a>
-        <a class="card" href="#">
-          <img class="card__img" src="assets/img//colonnade.jpg" alt="Colonnade Perrault">
-          <h3 class="card__title">Colonnade Perrault</h3>
-          <p class="card__text">360° Virtual Tour</p>
-          <p class="card__text-min">Google Street Panorama View</p>
-        </a>
-        <a class="card" href="#">
-          <img class="card__img" src="assets/img/greek.jpg" alt="Greek hall">
-          <h3 class="card__title">Greek hall</h3>
-          <p class="card__text">360° Virtual Tour</p>
-          <p class="card__text-min">Google Street Panorama View</p>
-        </a>
-        <a class="card" href="#">
-          <img class="card__img" src="assets/img/mona.jpg" alt="Mona Lisa">
-          <h3 class="card__title">Mona Lisa</h3>
-          <p class="card__text">360° Virtual Tour</p>
-          <p class="card__text-min">Google Street Panorama View</p>
-        </a>
-        <a class="card" href="#">
-          <img class="card__img" src="assets/img/night.jpg" alt="Night Palace">
-          <h3 class="card__title">Night Palace</h3>
-          <p class="card__text">360° Virtual Tour</p>
-          <p class="card__text-min">Google Street Panorama View</p>
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <section class="explore">
-    <div class="container">
-
-      <div class="explore__inner">
-        <div class="explore__main">
-          <h2 class="section-title title-undreline">Picture explore</h2>
-          <p class="explore__text">
-            Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.
-          </p>
-          <p class="explore__text">
-            It was cleaned in 1984 to remove a <span>"yellow veil"</span> of dust that had gathered since the previous
-            restoration in the 19th century.
-          </p>
-          <p class="explore__text">
-            The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it
-            looked different.
-          </p>
-        </div>
-
-        <img class="explore__img" src="assets/img/explore.jpg" alt="explore-img">
-      </div>
-    </div>
-  </section>
-
-  <section class="video">
-    <div class="container">
-
-    </div>
-  </section>
-
-  <section class="gallery">
-    <div class="container">
-      <h2 class="section-title">Art Gallery</h2>
-
-      <ul class="gallery__inner">
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/galery111.jpg" alt="gallery image">
-        </li>
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/gallery4.jpg" alt="gallery image">
-        </li>
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/gallery7.jpg" alt="gallery image">
-        </li>
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/gallery10.jpg" alt="gallery image">
-        </li>
-
-
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/gallery2.jpg" alt="gallery image">
-        </li>
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/gallery5.jpg" alt="gallery image">
-        </li>
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/gallery8.jpg" alt="gallery image">
-        </li>
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/gallery11.jpg" alt="gallery image">
-        </li>
-
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/gallery3.jpg" alt="gallery image">
-        </li>
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/gallery6.jpg" alt="gallery image">
-        </li>
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/gallery9.jpg" alt="gallery image">
-        </li>
-        <li class="gallery__item">
-          <img class="gallery__img" src="assets/img/galery12.jpg" alt="gallery image">
-        </li>
-      </ul>
-    </div>
-  </section>
-
-  <section class="tickets">
-    <div class="container">
-      <h2 class="section-title gold-title title-undreline">BUY TICKETS</h2>
-
-      <div class="tickets__inner">
-        <img class="tickets__img" src="assets/img/tickets.jpg" alt="tickets image">
-
-        <div class="tickets__buying">
-          <div class="tickets__radio">
-            <h3 class="tickets__title">Ticket Type</h3>
-
-            <label class="tickets__label">
-              <input type="radio" checked="checked" name="radio">
-              <span class="checkmark"></span>
-              Permanent exhibition
-            </label>
-            <label class="tickets__label">
-              <input type="radio" name="radio">
-              <span class="checkmark"></span>
-              Temporary exhibition
-            </label>
-            <label class="tickets__label">
-              <input type="radio" name="radio">
-              <span class="checkmark"></span>
-              Combined Admission
-            </label>
-          </div>
-
-          <div class="tickets__amount">
-            <h3 class="tickets__title">Amount</h3>
-
-            <label class="tickets__buttons">Basic 18+
-              <button type="button">-</button>
-              <input type="number" min="0" max="20" value="1" readonly class="number">
-              <button type="button">+</button>
-            </label>
-
-            <label class="tickets__buttons">Senior 65+
-              <button type="button">-</button>
-              <input type="number" min="0" max="20" value="1" readonly class="number">
-              <button type="button">+</button>
-            </label>
-            <h3 class="tickets__title">Total €220</h3>
-            <button class="tickets__btn" type="button">Buy Now</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <img class="panorama" src="assets/img/panorama.jpg" alt="panorama">
-
-  <section class="contacts">
-    <div class="container">
-      <h2 class="section-title gold-title title-undreline">Contacts</h2>
-      <div class="contacts__inner">
-        <div class="contacts__info">
-          <h3 class="contacts__title">Palais Royal <br> Musee du Louvre</h3>
-
-          <ul class="contacts__list">
-            <li class="contacts__item">
-              <p>address: 75001 Paris, France</p>
-            </li>
-            <li class="contacts__item"><a class="contacts__link" href="tel:330140205050">phone: +33(0) 1 40 20 50 50</a>
-            </li>
-            <li class="contacts__item"><a class="contacts__link" href="mailto:info@louvre.fr">mail: info@louvre.fr</a>
-            </li>
-          </ul>
-        </div>
-        <img class="contacts__map" src="assets/img/map.jpg" alt="map">
-      </div>
-    </div>
-  </section>
-
+    </section>
+  </main>
+  
   <footer class="footer">
     <div class="line">
       <div class="container">
