feat: add video

--- a/museum/index.html
+++ b/museum/index.html
@@ -174,7 +174,40 @@
 
     <section class="video">
       <div class="container">
+        <div class="video__top-inner">
+          <h2 class="section-title gold-title">Video journey</h2>
+          <p class="video__top-text">Enter and visit one of the most famous museums in the world and enjoy masterpieces
+            such as Mona Lisa or Hammurabi's Code</p>
+        </div>
 
+        <img class="main__video" src="assets/img/main__video.jpg" alt="main__video">
+
+        <div class="bar">
+          <div class="bar__time">
+            <input class="progress1" type="range" value="40" min="0" max="100" step="1">
+          </div>
+
+          <div class="bar__volume">
+            <input class="progress2" type="range" value="40" min="0" max="100" step="1" >
+          </div>
+        </div>
+
+        <div class="video__slider">
+          <div class="images">
+            <img class="video__slider__img" src="assets/img/video1.jpg" alt="slider__img">
+            <img class="video__slider__img" src="assets/img/video2.jpg" alt="slider__img">
+            <img class="video__slider__img" src="assets/img/video3.jpg" alt="slider__img">
+          </div>
+
+
+          <ul class="slider__dots">
+            <li class="slider__dot"><button class="slider__button slider__button--active"></button></li>
+            <li class="slider__dot"><button class="slider__button"></button></li>
+            <li class="slider__dot"><button class="slider__button"></button></li>
+            <li class="slider__dot"><button class="slider__button"></button></li>
+            <li class="slider__dot"><button class="slider__button"></button></li>
+          </ul>
+        </div>
       </div>
     </section>
 
@@ -235,7 +268,7 @@
 
           <div class="tickets__buying">
             <div class="tickets__radio">
-              <h3 class="tickets__title">Ticket Type</h3>
+              <h4 class="tickets__title">Ticket Type</h4>
 
               <label class="tickets__label">
                 <input type="radio" checked="checked" name="radio">
@@ -255,7 +288,7 @@
             </div>
 
             <div class="tickets__amount">
-              <h3 class="tickets__amount-title">Amount</h3>
+              <h4 class="tickets__amount-title">Amount</h4>
 
 
               <p>Basic 18+</p>
@@ -272,7 +305,7 @@
                 <button class="last" type="button">+</button>
               </label>
 
-              <h3 class="tickets__title">Total €220</h3>
+              <h4 class="tickets__title">Total €220</h4>
               <button class="tickets__btn" type="button">Buy Now</button>
             </div>
           </div>
@@ -280,14 +313,14 @@
       </div>
     </section>
 
-    <img class="panorama" src="assets/img/panorama.jpg" alt="panorama">
+    <div class="parallax"></div>
 
     <section class="contacts">
       <div class="container">
         <h2 class="section-title gold-title title-undreline">Contacts</h2>
         <div class="contacts__inner">
           <div class="contacts__info">
-            <h3 class="contacts__title">Palais Royal <br> Musee du Louvre</h3>
+            <h4 class="contacts__title">Palais Royal <br> Musee du Louvre</h4>
 
             <ul class="contacts__list">
               <li class="contacts__item">
@@ -305,7 +338,7 @@
       </div>
     </section>
   </main>
-  
+
   <footer class="footer">
     <div class="line">
       <div class="container">
