fix: class name

--- a/museum/index.html
+++ b/museum/index.html
@@ -309,14 +309,14 @@
               <div class="tickets__buttons">
                 <button class="counter__btn-down" type="button">-</button>
                 <input type="number" min="0" max="20" value="1" readonly class="number">
-                <button class="counter__btn-up" class="last" type="button">+</button>
+                <button class="counter__btn-up last" type="button">+</button>
               </div>
 
               <p>Senior 65+</p>
               <div class="tickets__buttons last__label">
                 <button class="counter__btn-down" type="button">-</button>
                 <input type="number" min="0" max="20" value="1" readonly class="number">
-                <button class="counter__btn-up" class="last" type="button">+</button>
+                <button class="counter__btn-up last" type="button">+</button>
               </div>
 
               <h4 class="tickets__title">Total €220</h4>
