feat: add 768px

--- a/museum-adaptive/index.html
+++ b/museum-adaptive/index.html
@@ -62,7 +62,7 @@
     </div>
   </header>
 
-    <main>
+     <main>
     <section class="welcom">
       <div class="container">
         <div class="welcom__inner">
@@ -74,7 +74,7 @@
           <a class="btn" href="tours/tour1.html">Discover
             the Louvre
           </a>
-
+          <img class="bg__img" src="assets/img/liza2.jpg" alt="liza">
           <div class="slider">
             <div class="slider__inner">
               <div class="digits">
@@ -221,7 +221,7 @@
 
 
 
-
+ 
              <div class="video__item">
               <iframe width="425" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo"
                 title="YouTube video player" frameborder="0"
@@ -239,7 +239,7 @@
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            </div>   
+            </div>    
 
 
 
@@ -276,7 +276,7 @@
 
 
 
- 
+
       <section class="gallery" id="gallery">
       <div class="container">
         <h2 class="section-title">Art Gallery</h2>
@@ -324,7 +324,7 @@
         </ul>
       </div>
     </section> 
-
+ 
     <section class="tickets" id="tickets">
       <div class="container">
         <h2 class="section-title gold-title title-undreline">BUY TICKETS</h2>
@@ -635,7 +635,7 @@
         </div>
       </div>
     </form>
-  </div>
+  </div> 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
