feat: add burger menu

--- a/museum-adaptive/index.html
+++ b/museum-adaptive/index.html
@@ -24,7 +24,9 @@
         <a class="logo logo-padding" href="">Louvre</a>
 
         <button class="burger__menu"></button>
+        <button class="close__butrger-btn"></button>
         <nav class="menu">
+          
           <ul class="menu__list">
             <li class="menu__list-item">
               <a class="menu__list-link" href="#visiting">
