--- a/momentum/index.html
+++ b/momentum/index.html
@@ -83,11 +83,11 @@
 
       <div class="show">
         <div class="show-hide show-flex">
-          <div>Show/Hide</div>
+          <div class="show-hide-text">Show/Hide</div>
         </div>
 
         <div class="show-time show-flex">
-          <div>Time</div>
+          <div class="show-time-text">Time</div>
           <div class="show-flex-in">
             <div class="time-show show1 active-show">Show</div>
             <div class="time-hide hide1">Hide</div>
@@ -95,7 +95,7 @@
         </div>
 
         <div class="show-date show-flex">
-          <div>Date</div>
+          <div class="show-date-text">Date</div>
           <div class="show-flex-in">
             <div class="date-show show1 active-show">Show</div>
             <div class="date-hide hide1">Hide</div>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="show-greeting show-flex">
-          <div>Greeting</div>
+          <div class="show-greeting-text">Greeting</div>
           <div class="show-flex-in">
             <div class="greeting-show show1 active-show">Show</div>
             <div class="greeting-hide hide1">Hide</div>
@@ -111,7 +111,7 @@
         </div>
 
         <div class="show-quote show-flex">
-          <div>Quote</div>
+          <div class="show-quote-text">Quote</div>
           <div class="show-flex-in">
             <div class="quote-show show1 active-show">Show</div>
             <div class="quote-hide hide1">Hide</div>
@@ -119,7 +119,7 @@
         </div>
 
         <div class="show-weather show-flex">
-          <div>Weather</div>
+          <div class="show-weather-text">Weather</div>
           <div class="show-flex-in">
             <div class="weather-show show1 active-show">Show</div>
             <div class="weather-hide hide1">Hide</div>
@@ -127,7 +127,7 @@
         </div>
 
         <div class="show-player show-flex">
-          <div>Audo player</div>
+          <div class="show-player-text">Audo player</div>
           <div class="show-flex-in">
             <div class="player-show show1 active-show">Show</div>
             <div class="player-hide hide1">Hide</div>
@@ -143,6 +143,11 @@
           <div class="unsplash photo-from-frame">Unsplash API</div>
           <div class="flickr photo-from-frame">Flickr API</div>
         </div>
+      </div>
+
+      <div class="tag">
+        <div class="tag-title">Enter your tag for API</div>
+        <input class="tag-input" type="text" placeholder="[Enter tag]">
       </div>
 
     </div>
