--- a/momentum/index.html
+++ b/momentum/index.html
@@ -72,7 +72,7 @@
   </main>
   <footer class="footer">
     <div class="gear"></div>
-    <div class="settings settings-active">
+    <div class="settings">
       <div class="settings-lang">
         <div class="settings-lang_text">Choose language</div>
         <div class="languages">
@@ -149,14 +149,19 @@
         <div class="tag-title">Enter your tag for API</div>
         <input class="tag-input" type="text" placeholder="[Enter tag]">
       </div>
-
     </div>
+
     <div class="footer-quote">
       <button class="change-quote"></button>
       <div>
         <div class="quote"></div>
         <div class="author"></div>
       </div>
+    </div>
+    <div>
+      <div class="footer-git"><a class="footer-git-link" href="https://github.com/l1irik-rbk">GitHub</a></div>
+      <div class="footer-school"><a href="https://rs.school/js/"><img src="assets/svg/rs_school_js.svg"
+            alt="rs-school"></a></div>
     </div>
   </footer>
   <script type="module" src="js/main.js"></script>
