--- a/momentum/index.html
+++ b/momentum/index.html
@@ -163,6 +163,38 @@
       <div class="footer-school"><a href="https://rs.school/js/"><img src="assets/svg/rs_school_js.svg"
             alt="rs-school"></a></div>
     </div>
+    <div class="todo-list-title">ToDo List</div>
+    <div class="todo-list">
+      <div class="todo-list-main">
+
+        <div class="todo-list-task">
+          <div class="todo-list-text todo-list-all-done">afafsafasafafsafasafafsafas</div>
+          <div class="todo-list-btns">
+            <div class="todo-list-done">Done</div>
+            <div class="todo-list-delete">Delete</div>
+          </div>        
+        </div>
+
+        <div class="todo-list-task">
+          <div class="todo-list-text">afafsafasafafsafasafafsafas</div>
+          <div class="todo-list-btns">
+            <div class="todo-list-done">Done</div>
+            <div class="todo-list-delete">Delete</div>
+          </div>        
+        </div>
+      </div>
+      <div class="todo-list-bottom">
+        <input class="todo-list-input" type="text" autofocus>
+        <div class="todo-list-bottom-btns">
+          <div class="todo-list-btn">Add</div>
+
+          <div class="todo-list-important">
+            <input id="important" class="input-important" type="checkbox" name="important">
+            <label for="important">Important</label>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
   <script type="module" src="js/main.js"></script>
 </body>
