feat: done task

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -134,6 +134,14 @@
           </div>
         </div>
 
+        <div class="show-todo show-flex">
+          <div class="show-todo-text">ToDo List</div>
+          <div class="show-flex-in">
+            <div class="todo-show show1 active-show">Show</div>
+            <div class="todo-hide hide1">Hide</div>
+          </div>
+        </div>
+
       </div>
 
       <div class="photo-from">
@@ -165,24 +173,8 @@
     </div>
     <div class="todo-list-title">ToDo List</div>
     <div class="todo-list">
-      <div class="todo-list-main">
+      <div class="todo-list-main"></div>
 
-        <div class="todo-list-task">
-          <div class="todo-list-text todo-list-all-done">afafsafasafafsafasafafsafas</div>
-          <div class="todo-list-btns">
-            <div class="todo-list-done">Done</div>
-            <div class="todo-list-delete">Delete</div>
-          </div>        
-        </div>
-
-        <div class="todo-list-task">
-          <div class="todo-list-text">afafsafasafafsafasafafsafas</div>
-          <div class="todo-list-btns">
-            <div class="todo-list-done">Done</div>
-            <div class="todo-list-delete">Delete</div>
-          </div>        
-        </div>
-      </div>
       <div class="todo-list-bottom">
         <input class="todo-list-input" type="text" autofocus>
         <div class="todo-list-bottom-btns">
