feat: add animation

--- a/art-quiz/index.html
+++ b/art-quiz/index.html
@@ -21,26 +21,18 @@
 
     <div class="wrapper">
 
-      <div class="main__page">
+      <div class="main__page active__page"></div>
 
-      </div>
+      <div class="quiz"></div>
 
-      <div class="quiz">
-        
-      </div>
+      <div class="quiz__questions"></div>
 
-      <div class="quiz__questions">
+      <div class="result"> </div>
 
-      </div>
-
-      <div class="result">
-
-      </div>
-
-      <div class="settings">
-
-      </div>
+      <div class="settings"></div>
      
+      <div class="popup"></div>
+
       <footer class="footer">
         <div class="footer__wrapper">
           <a class="footer__school-link" href="https://rs.school/js/">
@@ -54,11 +46,8 @@
         </div>
       </footer>
 
-      <div class="popup">
-
-      </div>
-
     </div>
+
   </div>
 
   <script type="module" src="index.js"></script>
