feat: add main in index.html

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="assets/favicon.ico" rel="shortcut icon" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Neucha&family=Roboto+Condensed&display=swap" rel="stylesheet">
   <title>Christmas-task</title>
 </head>
 
 <body>
-
+  <main>
+    <div class="container">
+      <div class="main__top"></div>
+      <section class="main-page">
+        <h1 class="main-page__title title">Помогите бабушке<br> нарядить елку</h1>
+        <button class="main-page__btn">Начать</button>
+      </section>
+      <section class="toys-page"></section>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <a class="footer__author" href="https://github.com/l1irik-rbk">Работу выполнил: l1irik-rbk</a>
+        <p class="footer__year">2021</p>
+        <a class="footer__link" href="https://rs.school/js/">
+          <div class="footer__link-content"></div>
+        </a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
