--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -30,7 +30,7 @@
                 <div class="filters__top-score">0</div>
               </div>
               <div class="">
-                <input class="filters__top-search" type="text" placeholder="Поиск">
+                <input class="filters__top-search" type="text" placeholder="Поиск" autofocus>
                 <div class="filters__top-icon"></div>
               </div>
 
@@ -99,15 +99,16 @@
           <div class="toys">
             <h2 class="toys__title title">Игрушки</h2>
             <div class="toys__inner">
-              <div class="card">
+              <!-- <div class="card">
                 <h5 class="card__title title">Большой шар с рисунком Цветок</h5>
-                <div class="card__img"></div>
+                <div class="card__img" style="background-image: url('./assets/toys/1.webp');"></div>
                 <p class="card__count">Количество: 2</p>
                 <p class="card__year">Год покупки: 1960 год</p>
                 <p class="card__color">Цвет игрушки: желтый</p>
                 <p class="card__size">Размер игрушки: большой</p>
-                <p class="card__favorite">Любимая: нет</p>
-              </div>
+                <p class="card__beloved">Любимая: нет</p>
+                <div class="card__favorites favorites"></div>
+              </div> -->
             </div>
           </div>
         </div>
