feat: add search

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -29,7 +29,7 @@
                 <div class="filters__top-favorites__img"></div>
                 <div class="filters__top-score">0</div>
               </div>
-              <div class="">
+              <div>
                 <input class="filters__top-search" type="text" placeholder="Поиск" autofocus>
                 <div class="filters__top-icon"></div>
               </div>
