feat: add localstorage

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -107,6 +107,7 @@
             </div>
             <div class="filters__btns">
               <button class="filters__btn-reset">Сбросить фильтры</button>
+              <button class="filters__btn-settings">Сбросить настройки</button>
             </div>
           </div>
 
